Fix issue where main navigation would not stretch to full height of window when inner UIs were small

--- a/stylesheets/_layout.tabs.scss
+++ b/stylesheets/_layout.tabs.scss
@@ -1,3 +1,7 @@
+.container {
+    height: 100%;
+}
+
 .content-main {
     position: relative;
     display: table;
